# stm32g4_bq76952_dronecan

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Drivers/BSP/STM32G4xx_Nucleo/: README.md  Release_Notes.html
Includes/: bq76952_protocol.h  canard_node.h  fdcan.h  i2c.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  stm32g4xx_nucleo_conf.h
Includes/dsdl/: dronecan_msgs.h  uavcan.Timestamp.h  uavcan.protocol.GetNodeInfo.h  uavcan.protocol.GetNodeInfo_req.h  uavcan.protocol.GetNodeInfo_res.h  uavcan.protocol.HardwareVersion.h  uavcan.protocol.NodeStatus.h  uavcan.protocol.SoftwareVersion.h  uavcan.protocol.debug.KeyValue.h  uavcan.protocol.debug.LogLevel.h  uavcan.protocol.debug.LogMessage.h  uavcan.protocol.dynamic_node_id.Allocation.h
Includes/libcanard/: canard.h  canard_internals.h
Sources/: bq76952_protocol.c  canard.c  canard_node.c  fdcan.c  i2c.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  system_stm32g4xx.c
Sources/dsdl/: uavcan.Timestamp.c  uavcan.protocol.GetNodeInfo_req.c  uavcan.protocol.GetNodeInfo_res.c  uavcan.protocol.HardwareVersion.c  uavcan.protocol.NodeStatus.c  uavcan.protocol.SoftwareVersion.c  uavcan.protocol.debug.KeyValue.c  uavcan.protocol.debug.LogLevel.c  uavcan.protocol.debug.LogMessage.c  uavcan.protocol.dynamic_node_id.Allocation.c
Startup/: startup_stm32g474retx.s
